--- a/Assets/Css/Register.css
+++ b/Assets/Css/Register.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 300px;
+    width: 300px in !important;
     background-color: #fff;
     border-radius: 20px;
     padding: 30px 20px;
@@ -323,4 +323,8 @@ ul {
 .login-socials{
     margin-top: 100px;
     margin-right: 10px;
+}
+
+.upload-button{
+  padding: 10px;
 }
